--- a/pc/polybar/config
+++ b/pc/polybar/config
@@ -12,15 +12,14 @@ monitor = DisplayPort-2
 
 width = 99%
 height = 26
-border-size = 2
-border-color = ${colors.colorBorder}
+#border-size = 2
+#border-color = ${colors.colorBorder}
 offset-x = 0.5%
-#offset-y = 0
+offset-y = 6
 radius = 0.0
 fixed-center = true
-padding = 2
 
-background = ${colors.colorBackground}
+background = #00000000
 foreground = ${colors.colorForeground}
 
 override-redirect = true
@@ -28,19 +27,20 @@ override-redirect = true
 module-margin-left = 2
 module-margin-right = 2
 
-line-size = 1
-line-color = ${colors.colorUnderline}
+#line-size = 1
+#line-color = ${colors.colorUnderline}
 
 modules-left = ewmh cpu memory
 modules-center = date
 modules-right = filesystemSSD filesystemHDD eth powermenu
 
-font-0 = "Open Sans:style=Regular"
-font-1 = "icomoon:style=Regular"
-font-2 = "octicons:style=Medium"
-font-3 = "Twemoji:style=Regular;size=11"
-font-4 = "Roboto:style=Medium"
-font-5 = "FontAwesome:style=Regular"
+font-0 = Open Sans:style=Semibold;3
+font-1 = icomoon:style=Regular
+font-2 = octicons:style=Medium
+font-3 = Twemoji:style=Regular
+font-4 = Roboto:style=Medium;3
+font-5 = FontAwesome:style=Regular
+font-6 = SourceCodePro:style=Regular;3
 
 ###########################################################
 #######HDMI-BAR############################################
@@ -51,15 +51,14 @@ monitor = HDMI-A-0
 
 width = 98%
 height = 26
-border-size = 2
-border-color = ${colors.colorBorder}
+#border-size = 2
+#border-color = ${colors.colorBorder}
 offset-x = 1%
-#offset-y = 0
+offset-y = 6
 radius = 0.0
 fixed-center = true
-padding = 2
 
-background = ${colors.colorBackground}
+background = #00000000
 foreground = ${colors.colorForeground}
 
 override-redirect = true
@@ -67,19 +66,20 @@ override-redirect = true
 module-margin-left = 2
 module-margin-right = 2
 
-line-size = 1
-line-color = ${colors.colorUnderline}
+#line-size = 1
+#line-color = ${colors.colorUnderline}
 
 modules-left = ewmh
 modules-center = date
 modules-right = powermenu
 
-font-0 = "Open Sans:style=Regular"
-font-1 = "icomoon:style=Regular"
-font-2 = "octicons:style=Medium"
-font-3 = "Twemoji:style=Regular;size=11"
-font-4 = "Roboto:style=Medium"
-font-5 = "FontAwesome:style=Regular"
+font-0 = Open Sans:style=Semibold;3
+font-1 = icomoon:style=Regular
+font-2 = octicons:style=Medium
+font-3 = Twemoji:style=Regular
+font-4 = Roboto:style=Medium;3
+font-5 = FontAwesome:style=Regular
+font-6 = SourceCodePro:style=Regular;3
 
 ###########################################################
 ###########################################################
@@ -87,7 +87,7 @@ font-5 = "FontAwesome:style=Regular"
 
 [colors]
 colorUnderline = #ffffff
-colorBackground = #000018
+colorBackground = #090909
 colorForeground = #ffffff
 colorBorder = #ffffff
 
@@ -99,8 +99,10 @@ interval = 30
 
 mount-0 = /
 
+label-mounted-padding = 2
 label-mounted = %mountpoint%: %free% free
 label-mounted-font = 1
+label-unmounted-padding = 2
 label-unmounted = %mountpoint% umtd
 label-unmounted-font = 1
 
@@ -113,8 +115,10 @@ interval = 30
 
 mount-0 = /hdd1
 
+label-mounted-padding = 2
 label-mounted = %mountpoint%: %free% free
 label-mounted-font = 1
+label-unmounted-padding = 2
 label-unmounted = %mountpoint% umtd
 label-unmounted-font = 1
 
@@ -125,6 +129,7 @@ type = internal/cpu
 interval = 2
 label = cpu: %percentage%% utl
 label-font = 1
+label-padding = 2
 
 ###########################################################
 
@@ -133,6 +138,7 @@ type = internal/memory
 interval = 2
 label = memory: %gb_used% usd
 label-font = 1
+label-padding = 2
 
 ###########################################################
 
@@ -141,9 +147,11 @@ type = internal/network
 interface = enp34s0
 interval = 5
 
+label-connected-padding = 2
 label-connected = eth con
 label-connected-font = 1
 
+label-disconnected-padding = 2
 label-disconnected = eth disc
 label-disconnect-font = 1
 
@@ -161,6 +169,10 @@ time-alt = %H:%M:%S
 
 label = %date% %time%
 label-font = 1
+label-padding = 2
+
+format-border-size = 2
+format-border-color = ${colors.colorBorder}
 
 ###########################################################
 
@@ -171,7 +183,9 @@ expand-right = true
 
 format-spacing = 2
 
+label-open-padding = 2
 label-open = pwr >
+label-close-padding = 2
 label-close = pwr <
 label-separator = /
 label-open-font = 1
@@ -217,25 +231,26 @@ icon-4 = 5;
 format = <label-state>
 label-monitor = %name%
 
-label-active = |%name%|
-label-active-margin = 1
-label-active-padding = 0
-label-active-font = 1
+label-active = %name%
+#label-active-margin = 1
+label-active-padding = 2
+label-active-font = 7
+label-active-foreground = #ff0000
 
 label-occupied = %name%
-label-occupied-margin = 1
-label-occupied-padding = 0
-label-occupied-font = 1
+#label-occupied-margin = 1
+label-occupied-padding = 2
+label-occupied-font = 7
 
 label-urgent = !%name%!
-label-urgent-margin = 1
-label-urgent-padding = 0
-label-urgent-font = 1
+#label-urgent-margin = 1
+label-urgent-padding = 2
+label-urgent-font = 7
 
 label-empty = %name%
-label-empty-margin = 1
-label-empty-padding = 0
-label-empty-font = 1
+#label-empty-margin = 1
+label-empty-padding = 2
+label-empty-font = 7
 
 ###########################################################
 
@@ -251,6 +266,8 @@ label-font = 1
 [settings]
 #screenchange-reload = true
 #pseudo-transparency = true
+format-background = ${colors.colorBackground}
+format-foreground = ${colors.colorForeground}
 
 ###########################################################
 
