--- a/combined/ncspot/config.toml
+++ b/combined/ncspot/config.toml
@@ -6,15 +6,15 @@ gapless = true
 [theme]
 primary = "light white"
 secondary = "light black"
-title = "green"
-playing = "green"
+title = "red"
+playing = "red"
 playing_bg = "black"
 highlight = "light white"
-highlight_bg = "#484848"
+highlight_bg = "red"
 error = "light white"
 error_bg = "red"
 statusbar = "black"
-statusbar_progress = "green"
-statusbar_bg = "green"
+statusbar_progress = "red"
+statusbar_bg = "red"
 cmdline = "light white"
 cmdline_bg = "black"
