--- a/combined/picom/picom.conf
+++ b/combined/picom/picom.conf
@@ -12,7 +12,7 @@ shadow = false;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 7;
+shadow-radius = 12;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
 # shadow-opacity = .75
@@ -92,11 +92,11 @@ fading = true
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
-fade-in-step = 0.07;
+fade-in-step = 0.06;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
 # fade-out-step = 0.03
-fade-out-step = 0.07;
+fade-out-step = 0.06;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
 # fade-delta = 10
@@ -155,21 +155,30 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #     Background-Blurring       #
 #################################
 
-blur:
+#blur:
+#{
+#	method = "gaussian";
+#	size = 10;
+#	deviation = 5.0;
+#};
+
+blur :
 {
-	#gaussian, box, kernel
-	method = "gaussian";
-	size = 10;
-	deviation = 5.0;
+  method = "dual_kawase";
+  strength = 10;
+  background = false;
+  background-frame = false;
+  background-fixer = false;
+  kern = "3x3box";
 };
 
 # Exclude conditions for background blur.
 # blur-background-exclude = []
-#blur-background-exclude = [
-#  "window_type = 'dock'",
-#  "window_type = 'desktop'",
-#  "_GTK_FRAME_EXTENTS@:c"
-#];
+blur-background-exclude = [
+  "window_type = 'dock'",
+  "window_type = 'desktop'",
+  "_GTK_FRAME_EXTENTS@:c"
+];
 
 #################################
 #       General Settings        #
