--- a/pc/polybar/config
+++ b/pc/polybar/config
@@ -10,16 +10,16 @@
 [bar/main-hlwm]
 monitor = DisplayPort-2
 
-width = 99%
-height = 26
+width = 100%
+height = 34
 #border-size = 2
 #border-color = ${colors.colorBorder}
-offset-x = 0.5%
-offset-y = 12
-radius = 0.0
+#offset-x = 0.5%
+#offset-y = 12
+#radius = 15
 fixed-center = true
 
-background = #00000000
+background = ${colors.colorBackground}
 foreground = ${colors.colorForeground}
 
 #override-redirect = true
@@ -30,13 +30,13 @@ modules-left = ewmh cpu memory
 modules-center = date
 modules-right = filesystemSSD filesystemHDD eth powermenu
 
-font-0 = Open Sans:style=Semibold;3
+font-0 = Open Sans:size=13:style=Semibold;2
 font-1 = icomoon:style=Regular
 font-2 = octicons:style=Medium
 font-3 = Twemoji:style=Regular
-font-4 = Roboto:style=Medium;3
-font-5 = FontAwesome:style=Regular;3
-font-6 = SourceCodePro:style=Regular;3
+font-4 = Roboto:style=Medium;2
+font-5 = FontAwesome:size=13:style=Regular;2
+font-6 = SourceCodePro:size=13:style=Regular;2
 
 ###########################################################
 ####                     HDMI-BAR                      ####
@@ -45,16 +45,16 @@ font-6 = SourceCodePro:style=Regular;3
 [bar/sec-hlwm]
 monitor = HDMI-A-0
 
-width = 97.5%
-height = 26
+width = 100%
+height = 34
 #border-size = 2
 #border-color = ${colors.colorBorder}
-offset-x = 1.25%
-offset-y = 12
-radius = 0.0
+#offset-x = 1.25%
+#offset-y = 12
+#radius = 15
 fixed-center = true
 
-background = #00000000
+background = ${colors.colorBackground}
 foreground = ${colors.colorForeground}
 
 #override-redirect = true
@@ -65,24 +65,24 @@ modules-left = ewmh
 modules-center = date
 modules-right = powermenu
 
-font-0 = Open Sans:style=Semibold;3
+font-0 = Open Sans:size=13:style=Semibold;2
 font-1 = icomoon:style=Regular
 font-2 = octicons:style=Medium
 font-3 = Twemoji:style=Regular
-font-4 = Roboto:style=Medium;3
-font-5 = FontAwesome:style=Regular;3
-font-6 = SourceCodePro:style=Regular;3
+font-4 = Roboto:style=Medium;2
+font-5 = FontAwesome:size=13:style=Regular;2
+font-6 = SourceCodePro:size=13:style=Regular;2
 
 ###########################################################
 ###########################################################
 ###########################################################
 
 [colors]
-colorUnderline = #ffffff
-colorBackground = #090909
-colorForeground = #ffffff
+colorUnderline = #888888
+colorBackground = #cccccc
+colorForeground = #000000
 colorBorder = #ffffff
-colorActive = #00aeef
+colorActive = #888888
 
 ###########################################################
 
@@ -145,11 +145,8 @@ label-disconnect-font = 1
 type = internal/date
 interval = 1
 
-date = "  %d."
 date-alt = "  %d.%m.%Y"
-
-time = " %H:%M"
-time-alt = " %H:%M:%S"
+time = " %H:%M:%S"
 
 label = %time% %date%
 label-font = 1
@@ -240,7 +237,7 @@ label-font = 1
 [settings]
 #screenchange-reload = true
 #pseudo-transparency = true
-format-background = ${colors.colorBackground}
+#format-background = ${colors.colorBackground}
 format-foreground = ${colors.colorForeground}
 format-padding = 3
 
