--- a/combined/kitty/kitty.conf
+++ b/combined/kitty/kitty.conf
@@ -172,18 +172,18 @@ cursor_shape underline
 
 #: Defines the thickness of the beam cursor (in pts)
 
-# cursor_underline_thickness 1.0
+cursor_underline_thickness 1.5
 
 #: Defines the thickness of the underline cursor (in pts)
 
-# cursor_blink_interval -1
+cursor_blink_interval 0.3
 
 #: The interval (in seconds) at which to blink the cursor. Set to zero
 #: to disable blinking. Negative values mean use system default. Note
 #: that numbers smaller than repaint_delay will be limited to
 #: repaint_delay.
 
-# cursor_stop_blinking_after 15.0
+cursor_stop_blinking_after 5
 
 #: Stop blinking cursor after the specified number of seconds of
 #: keyboard inactivity.  Set to zero to never stop blinking.
@@ -462,7 +462,7 @@ enable_audio_bell no
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-# window_padding_width 0
+window_padding_width 8
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -632,7 +632,7 @@ background #000000
 
 #: The foreground and background colors
 
-background_opacity 0.7
+background_opacity 0.8
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
