--- a/combined/ncspot/config.toml
+++ b/combined/ncspot/config.toml
@@ -4,17 +4,17 @@ notify = true
 gapless = true
 
 [theme]
-primary = "light white"
-secondary = "light black"
-title = "red"
-playing = "red"
+primary = "white"
+secondary = "black"
+title = "#009900"
+playing = "#009900"
 playing_bg = "black"
 highlight = "light white"
-highlight_bg = "red"
+highlight_bg = "#009900"
 error = "light white"
-error_bg = "red"
+error_bg = "#009900"
 statusbar = "black"
-statusbar_progress = "red"
-statusbar_bg = "red"
+statusbar_progress = "#009900"
+statusbar_bg = "#009900"
 cmdline = "light white"
 cmdline_bg = "black"
