--- a/laptop/polybar/config
+++ b/laptop/polybar/config
@@ -143,11 +143,27 @@ adapter = ADP1
 
 poll-interval = 5
 
-label-charging =   %percentage%% @ %consumption%W
+label-charging = %percentage%% @ %consumption%W
 label-charging-font = 1
 
-label-discharging =   %percentage%%
+label-discharging = %percentage%%
 label-discharging-font = 1
+
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+animation-charging-framerate = 500
+
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+
+format-discharging = <ramp-capacity> <label-discharging>
+format-charging = <animation-charging> <label-charging>
 
 ###########################################################
 
