--- a/laptop/polybar/config
+++ b/laptop/polybar/config
@@ -37,6 +37,7 @@ font-3 = Twemoji:style=Regular;size=11
 font-4 = Roboto:style=Medium;3
 font-5 = FontAwesome:style=Regular;3
 font-6 = SourceCodePro:style=Regular;3
+font-7 = SauceCodePro Nerd Font:style=Medium;3
 
 ###########################################################
 ###########################################################
@@ -85,21 +86,18 @@ type = internal/network
 interface = wlo1
 interval = 5
 
-format-connected = <label-connected> <ramp-signal>
-format-disconnected = <label-disconnected>
+format-connected =  <label-connected> <ramp-signal>
+format-disconnected =  <label-disconnected>
 format-packetloss = <label-packetloss>
 
-label-connected =   %essid%
+label-connected = %essid%
 label-connected-font = 1
-label-disconnected =   dsc
+label-disconnected = dsc
 label-disconnected-font = 1
 
-ramp-signal-0 = + 
-ramp-signal-1 = /
-ramp-signal-2 = /+
-ramp-signal-3 = //
-ramp-signal-4 = //+
-ramp-signal-5 = ///
+ramp-signal-0 = /
+ramp-signal-1 = //
+ramp-signal-2 = ///
 
 ###########################################################
 
@@ -120,10 +118,12 @@ label-disconnect-font = 1
 type = internal/date
 interval = 1
 
-#date = ""
-date-alt = "  %d.%m.%Y"
+format = <label>
 
-time = " %H:%M:%S"
+#date = ""
+date-alt = "%d.%m.%Y"
+
+time = "%H:%M:%S"
 #time-alt = ""
 
 label = %time% %date%
