--- a/laptop/polybar/config
+++ b/laptop/polybar/config
@@ -28,10 +28,10 @@ module-margin-left = 2
 module-margin-right = 2
 modules-left = ewmh cpu memory
 modules-center = date
-modules-right = wireless-network battery powermenu
+modules-right = weather wireless-network battery powermenu
 
 font-0 = Open Sans:style=Semibold;3
-font-1 = icomoon:style=Regular
+font-1 = Weather Icons:size=12;1
 font-2 = octicons:style=Medium
 font-3 = Twemoji:style=Regular;size=11
 font-4 = Roboto:style=Medium;3
@@ -58,8 +58,10 @@ interval = 30
 
 mount-0 = /
 
-label-mounted =   %free% free
-label-unmounted =   umtd
+format = fsrt: <label>
+
+label-mounted = %free% free
+label-unmounted = umtd
 label-mounted-font = 1
 label-unmounted-font = 1
 
@@ -68,18 +70,24 @@ label-unmounted-font = 1
 [module/cpu]
 type = internal/cpu
 interval = 2
-format = cpu: <label>
-label = %percentage%% utl
+
+format = cpu: <label> utl
+
+label = %percentage%%
 label-font = 1
+label-foreground = ${colors.colorActive}
 
 ###########################################################
 
 [module/memory]
 type = internal/memory
 interval = 2
-format = mry: <label>
-label = %percentage_used%% usd
+
+format = mry: <label> utl
+
+label = %percentage_used%%
 label-font = 1
+label-foreground = ${colors.colorActive}
 
 ###########################################################
 
@@ -96,6 +104,8 @@ label-connected = %essid%
 label-connected-font = 1
 label-disconnected = dsc
 label-disconnected-font = 1
+label-disconnected-foreground = ${colors.colorActive}
+label-connected-foreground = ${colors.colorActive}
 
 ramp-signal-0 = /
 ramp-signal-1 = //
@@ -134,9 +144,11 @@ poll-interval = 5
 
 label-charging = %percentage%% @ %consumption%W
 label-charging-font = 1
+label-charging-foreground = ${colors.colorActive}
 
 label-discharging = %percentage%%
 label-discharging-font = 1
+label-discharging-foreground = ${colors.colorActive}
 
 animation-charging-0 = 
 animation-charging-1 = 
@@ -146,6 +158,7 @@ animation-charging-4 = 
 animation-charging-framerate = 500
 
 ramp-capacity-0 = 
+ramp-capacity-0-foreground = #ff0000
 ramp-capacity-1 = 
 ramp-capacity-2 = 
 ramp-capacity-3 = 
@@ -153,6 +166,16 @@ ramp-capacity-4 = 
 
 format-discharging = <ramp-capacity> <label-discharging>
 format-charging = <animation-charging> <label-charging>
+
+###########################################################
+
+[module/weather]
+type = custom/script
+exec = ~/.config/polybar/scripts/openweathermap-fullfeatured.sh
+interval = 120
+format = wthr:  <label>
+label-font = 1
+label-foreground = ${colors.colorActive}
 
 ###########################################################
 
@@ -178,15 +201,18 @@ menu-0-2-exec = menu-open-3
 
 menu-1-1 = cancel
 menu-1-1-exec = menu-open-0
-menu-1-0 = %{F#ff0000}reboot%{F-}
+menu-1-0 = reboot
+menu-1-0-foreground = ${colors.colorActive}
 menu-1-0-exec = reboot
 
-menu-2-0 = %{F#ff0000}power off%{F-}
+menu-2-0 = power off
+menu-2-0-foreground = ${colors.colorActive}
 menu-2-0-exec = poweroff
 menu-2-1 = cancel
 menu-2-1-exec = menu-open-0
 
-menu-3-0 = %{F#ff0000}sleep%{F-}
+menu-3-0 = sleep
+menu-3-0-foreground = ${colors.colorActive}
 menu-3-0-exec = systemctl suspend && ~/.config/herbstluftwm/scripts/i3lock.sh
 menu-3-1 = cancel
 menu-3-1-exec = menu-open-0
