--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-pc/polybar/scripts/openweathermap-fullfeatured.sh
-laptop/polybar/scripts/openweathermap-fullfeatured.sh
+pc/polybar/scripts
+laptop/polybar/scripts
