update configs and screenshot script

--- a/combined/picom/picom.conf
+++ b/combined/picom/picom.conf
@@ -49,11 +49,11 @@ fading = true
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
-fade-in-step = 0.06;
+fade-in-step = 0.04;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
 # fade-out-step = 0.03
-fade-out-step = 0.06;
+fade-out-step = 0.04;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
 # fade-delta = 10
@@ -119,7 +119,8 @@ blur :
 blur-background-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
-  "_GTK_FRAME_EXTENTS@:c"
+  "_GTK_FRAME_EXTENTS@:c",
+  "class_g = 'slop'"
 ];
 
 #################################
@@ -218,3 +219,7 @@ wintypes:
   dock = { shadow = false; }
   dnd = { shadow = false; }
 };
+
+glx-no-rebind-pixmap = true;
+glx-no-stencil = true;
+sw-opti = false;
